src/stylesheets/components/_toolbar.scss
//
// Toolbar
// --------------------------------------------------

.toolbar {
  display: flex;
  justify-content: space-between;
  height: $toolbar-height;
  flex: 0 0 auto;
  padding: $space-min $component-padding-horizontal 0;
  margin-bottom: $space-min;
  overflow: hidden;

  .panel-group-header & {
    padding-top: 0;
  }

  .panel-header & {
    height: 100%;
    margin: 0;
    padding-top: 0;
  }

  &.draggable {
    .frameless & {
      -webkit-app-region: drag;
      position: relative;
      z-index: $zindex-draggable;
    }
  }

  .toolbar-context {
    position: absolute;
    height: $toolbar-height;
    display: flex;
    justify-content: space-between;
    transform: translate3d(0, 100%, 0);
    transition: transform $toolbar-context-transition;

    &.active {
      transform: translate3d(0, 0, 0);
    }

    &.has-active {
      transform: translate3d(0, -100%, 0);
    }
  }

  .toolbar-left,
  .toolbar-center,
  .toolbar-right {
    display: flex;
    align-items: center;
  }

  .tool-group {
    & + .tool-group {
      margin-left: $space-xs;

      .panel & {
        margin-left: $space-min;
      }
    }
  }

  .icon + h4 {
    margin-left: $space-xs;
  }
}

